--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="css/styles.min.css">
     <!--  endbuild-->
   </head>
+  <body>
+    
+    <img src="images/bg.jpg">
+    <!--  build:js assets/scripts/combined.js-->
+    <script src="libs/jquery/jquery.min.js"></script>
+    <script src="libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
+    <!--  endbuild-->
+  </body>
 </html>
-<body>
-</body>
-<!--  build:js assets/scripts/combined.js-->
-<script src="libs/jquery/jquery.min.js"></script>
-<script src="libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="js/main.js"></script>
-<!--  endbuild-->
